Day3/persistent-volume/simple-java-app/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello 
  name: hello 
  namespace: jegan 
spec:
  ports:
  - port: 8080 
    protocol: TCP
    targetPort: 8080 
  selector:
    app: hello 
  type: ClusterIP
