Day3/persistent-volume/simple-java-app/hello-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
  namespace: jegan 
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
